[tool.poetry]
name = "openmeter"
version = "0.0.0"
description = "Client for OpenMeter: Real-Time and Scalable Usage Metering"
authors = ["Andras Toth <4157749+tothandras@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/openmeter/openmeter"
homepage = "https://openmeter.io"
keywords = [
    "openmeter",
    "api",
    "client",
    "usage",
    "usage-based",
    "metering",
    "ai",
    "aggregation",
    "real-time",
    "billing",
    "cloud",
]

[tool.poetry.dependencies]
python = "^3.9"
isodate = ">=0.6.1,<0.8.0"
corehttp = { version = ">=1.0.0b6", extras = ["requests", "aiohttp"] }
typing-extensions = ">=4.6.0"
cloudevents = "^1.10.0"
urllib3 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.3,<26.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | openmeter/_generated
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
