[tool.poetry]
name = "openmeter"
version = "0.0.0"
description = "Client for OpenMeter: Real-Time and Scalable Usage Metering"
authors = ["Andras Toth <4157749+tothandras@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/openmeter/openmeter"
homepage = "https://openmeter.io"
keywords = [
    "openmeter",
    "api",
    "client",
    "usage",
    "usage-based",
    "metering",
    "ai",
    "aggregation",
    "real-time",
    "billing",
    "cloud",
]

[tool.poetry.dependencies]
python = "^3.9"
isodate = ">=0.7.2,<0.8.0"
corehttp = { version = ">=1.0.0b7", extras = ["requests", "aiohttp"] }
typing-extensions = ">=4.15.0"
cloudevents = "^1.12.1"
urllib3 = "^2.6.3"

[tool.poetry.group.dev.dependencies]
black = ">=25.11,<27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
